# biomedisa

./: .gitignore  README.md  __main__.py  biomedisa_env.yml  conda_environment.yml  conda_interpolation.yml  credits.md  environment-dev.yml  environment-unpinned.yml  install.sh  manage.py  requirements.txt  requirements_22.04.txt  requirements_inter.txt  requirements_keras2.txt  start_workers.sh
README/: APACHE_SERVER.md  CLUSTER_SETUP.txt  INSTALL_APACHE_SERVER.md  revisions.md  (+57 more)
biomedisa_slicer_extension/biomedisa_extension/: CMakeLists.txt  config_template.py  slicer_env_test.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisa/: SegmentEditorBiomedisa.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisa/Logic/: BiomedisaLogic.py  BiomedisaParameter.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisa/SegmentEditorBiomedisaLib/: SegmentEditorEffect.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaDeepLearning/: CMakeLists.txt  SegmentEditorBiomedisaDeepLearning.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaDeepLearning/Logic/: BiomedisaDeepLearningLogic.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaDeepLearning/SegmentEditorBiomedisaDeepLearningLib/: SegmentEditorEffect.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaPrediction/: SegmentEditorBiomedisaPrediction.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaPrediction/Logic/: BiomedisaPredictionLogic.py  BiomedisaPredictionParameter.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaPrediction/SegmentEditorBiomedisaPredictionLib/: SegmentEditorEffect.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaTraining/: SegmentEditorBiomedisaTraining.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaTraining/Logic/: BiomedisaTrainingLogic.py  BiomedisaTrainingParameter.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorBiomedisaTraining/SegmentEditorBiomedisaTrainingLib/: SegmentEditorEffect.py
biomedisa_slicer_extension/biomedisa_extension/SegmentEditorCommon/: AbstractBiomedisaSegmentEditorEffect.py  AxisControl.py  Helper.py  ListSelectionDialog.py  ListSelectionDialogSelectionDialog.py  RoiSelectionWidget.py
biomedisa_slicer_extension/biomedisa_extension/biomedisa_module/: CMakeLists.txt  biomedisa_module.py
biomedisa_slicer_extension/biomedisa_extension/biomedisa_module/Models/: mouse_event_handler.py  vtk_numpy_converter.py
biomedisa_slicer_extension/totalSegment/: CMakeLists.txt
biomedisa_slicer_extension/totalSegment/biomedisa_segmentation/: CMakeLists.txt  biomedisa_segmentation.py
biomedisa_slicer_extension/totalSegment/segment_anything_module/: CMakeLists.txt  segment_anything_module.py
biomedisa_slicer_extension/totalSegment/segment_anything_module/Models/: dimension_manager.py  mouse_event_handler.py
(+333 files in other folders)
